[#changelog]
== Changelog

[#v0_6_1]
=== 0.6.1 (UNRELEASED)

 * Spec: Fix meaning-changing typos in `ic.did`

[#v0_6_0]
=== 0.6.0 (2020-06-08)

* Spec: Make all canister ids system-chosen
* Spec: HTTP requests for management features are removed
* ic-ref(-test): Implement and test the above changes

[#v0_4_0]
=== 0.4.0 (2020-05-25)

* Spec (editorial): the term “principal” is now used for the _id_ of a canister or
  user, not the canister or user itself
* Spec: The signature of a request needs to be calculated using a domain separator
* Spec: Describe the `controller` attribute, add a request to change it
* Spec: The IC management canister is introduced
* ic-ref(-test): Implement and test the above changes

[#v0_2_16]
=== 0.2.16 (2020-05-29)

* More tests about calls from query methods

[#v0_2_14]
=== 0.2.14 (2020-05-14)

* Spec: Bugfix: Mode should be `reinstall`, not `replace`
* ic-ref-test: A few more tests, refactorings

[#v0_2_12]
=== 0.2.12 (2020-05-06)

* ic-ref-test: Remove code to work around lack of creater cainster.
* ic-ref-test: Stricter tests for bad signatures
* ic-ref: Also accept CBOR maps of indeterminite length

[#v0_2_10]
=== 0.2.10 (2020-04-29)

* ic-ref: Bind to 127.0.0.1 instead of 0.0.0.0
* ic-ref: Set content-type even for error responses
* ic-ref-test: Tests related to query calls
* ic-ref-test: Test “reply after trap in prior callback”

[#v0_2_8]
=== 0.2.8 (2020-04-23)

* Spec: Include section with CDDL description
* ic-ref-test: Block less tests on `create_canister` support

[#v0_2_6]
=== 0.2.6 (2020-04-01)

* ic-ref-run: Accept any canister id in `install` commands
* ic-ref-test: More defensive printing of HTTP bodies

[#v0_2_4]
=== 0.2.4 (2020-03-23)

* simplify versioning (only three components), skip 0.2.2 to avoid confusion with 0.2.0.2
* spec: Clarification: `reply` field is always present
* spec: General cleanup based on front-to-back reading
* ic-ref(-test): Enforce signature checking