@@ -5,6 +5,7 @@
 === 0.6.1 (UNRELEASED)
 
  * Spec: Fix meaning-changing typos in `ic.did`
+ * ic-ref-test: Be more liberal about the precise reject code in some cases.
 
 [#v0_6_0]
 === 0.6.0 (2020-06-08)
